# psytest

./: .buildinfo  .gitignore  LICENSE  README.md  environment.yml  example.ipynb  genindex.html  index.html  modules.html  objects.inv  psytest.adftest.html  psytest.bubbles.html  psytest.critval.critval.html  psytest.critval.critval_parameters.html  psytest.critval.html  psytest.html  psytest.info_criteria.html  psytest.sadftest.html  psytest.utils.constants.html  psytest.utils.defaults.html  psytest.utils.functions.html  psytest.utils.html  py-modindex.html  sandbox.py  search.html  searchindex.js  setup.cfg  setup.py
.history/: .gitignore_20250404143331  .gitignore_20250404143335  .gitignore_20250404143344  .gitignore_20250404143353  .gitignore_20250404143358  .gitignore_20250404143407  README_20250409145619.md  README_20250409145642.md  README_20250409145653.md  README_20250409145656.md  README_20250409145914.md  README_20250409151142.md  README_20250409151840.md  README_20250409151858.md  README_20250409151903.md  README_20250409151911.md  README_20250409151918.md  README_20250409151937.md  README_20250409151944.md  README_20250409151947.md  README_20250409152106.md  README_20250409153337.md  README_20250409153547.md  adftest_20250326164959.py  adftest_20250326165001.py  adftest_20250326165003.py  critvals_20250327122320.py  critvals_20250327122433.py  critvals_20250327122502.py  critvals_20250327122708.py  sandbox_20250326165957.py  sandbox_20250326170224.py  sandbox_20250326170653.py  sandbox_20250326171055.py  sandbox_20250326172938.py  sandbox_20250326173334.py  (+67 more)
(+2032 files in other folders)
