# setup.cfg

[metadata]
name = attr: psytest
version = attr: psytest.__version__
author = attr: psytest.__author__
author_email = attr: psytest.__email__
description = attr: psytest.__description__
long_description = file: README.md
long_description_content_type = text/markdown
url = attr: psytest.__url__
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
    numpy
    numba
    scipy
    pandas
    deprecation
    importlib-resources

[options.package_data]
psytest = 
    critval/data/*.csv

[options.extras_require]
testing =
    pytest